--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
     "axios": "^1.2.3",
     "date-fns": "^2.29.3",
     "expo": "~47.0.12",
+    "expo-constants": "^14.0.2",
     "expo-status-bar": "~1.4.2",
     "react": "18.1.0",
     "react-native": "0.70.5",
     "react-native-elements": "^3.4.3",
     "react-native-maps": "^1.3.2",
+    "react-native-safe-area-context": "4.4.1",
     "react-native-svg": "13.4.0"
   },
   "devDependencies": {
